# ad5940_zephyr

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
ad5940/: AD5940Main.c  AD5940Main.h  BodyImpedance.c  ZephyrPort.c  ad5940.c  ad5940.h  debug_config.h
app_movil/notificador_app/: README.md  pubspec.yaml
boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.overlay
devicetree/: devicetree.overlay
docs/: Bluetooth-LE-Complete-Guide.md  Debugging-and-Development-Tools.md  Device-Drivers-and-GPIO.md  PRD.md  WORKFLOW.md  architecture.md  nRF-Connect-SDK-Fundamentals.md  porting-guide.md
docs/designs/: 000-template.md
docs/plans/: 2026-03-11-professional-repo-restructure-design.md
docs/testing/: fallData.txt  sensorsData.txt
llm-context/: Bootloaders-and-Firmware-Updates.md  Hardware-Peripherals-and-Communication.md  Multithreading-and-RTOS.md  README.md
notificador_app/: README.md  pubspec.yaml
notificador_app/lib/: main.dart
project-template/: .gitignore  CMakeLists.txt  README.md  prj.conf
project-template/.github/: PULL_REQUEST_TEMPLATE.md
project-template/boards/: nrf5340dk_nrf5340_cpuapp.overlay
project-template/docs/: PRD.md  WORKFLOW.md  architecture.md
project-template/llm-context/: README.md
project-template/src/: main.c
scripts/drivers/: BNO055.c  BNO055.h  ble.c  ble.h
scripts/utils/: fall_detection.c  fall_detection.h  madgwick_filter.c  madgwick_filter.h  utils.c  utils.h
src/: main.c
src/ad5940/: ad5940.c  (+6 more)
(+19 files in other folders)
